@@ -22,6 +22,10 @@ Version 4.4.1  [ under development ]
             - New class for a vector with fast reverse lookups.  This
               is more memory efficient than NIndexedArray, but requires
               modifications to the data type being stored.
+        Class NPacket, NPacketListener:
+            - Fires packetWasRenamed() when packet tags are added or removed.
+              Note that packet tags still cannot be accessed through the GUI
+              except for via the python bindings.
         Class NTriangulation:
             - Streamlined the implementation, cutting ~ 1/3 of the memory
               usage and improving speed also.  As a result:
